# qr_scanner

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
resources/: resource.rc
src/: detect_qr.cpp  detect_qr.hpp  main.cpp
src/ui/: camera_select.cpp  camera_select.hpp  capture_feed.cpp  capture_feed.hpp
